--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -270,8 +270,8 @@ body {
 .input-form form input {
   padding-left: 1.6rem;
 }
-.input-form #first-name,
-.input-form #card-number {
+.input-form #name,
+.input-form #number {
   width: 32.7rem;
   height: 4.5rem;
   background: #FFFFFF;
@@ -279,18 +279,18 @@ body {
   border-radius: 0.8rem;
   margin-bottom: 2rem;
 }
-.input-form #first-name:hover,
-.input-form #card-number:hover {
+.input-form #name:hover,
+.input-form #number:hover {
   cursor: pointer;
 }
-.input-form #exp-date {
+.input-form .exp-date {
   width: 7.2rem;
   height: 4.5rem;
   background: #FFFFFF;
   border: 1px solid #DFDEE0;
   border-radius: 0.8rem;
 }
-.input-form #exp-date:hover {
+.input-form .exp-date:hover {
   cursor: pointer;
 }
 .input-form .mm-yy-cvc {
@@ -298,7 +298,7 @@ body {
   gap: 0.8rem;
   margin-bottom: 2.8rem;
 }
-.input-form #cvc {
+.input-form #cvc-num {
   width: 16.4rem;
   height: 4.5rem;
   background: #FFFFFF;
@@ -306,7 +306,7 @@ body {
   border-radius: 0.8rem;
   margin-left: 0.3rem;
 }
-.input-form #cvc:hover {
+.input-form #cvc-num:hover {
   cursor: pointer;
 }
 .input-form .mm-yy-cvc-labels {
@@ -380,8 +380,11 @@ body {
   background: #21092F;
   border-radius: 0.8rem;
 }
+#complete-state .btn-continue:hover {
+  cursor: pointer;
+}
 
-#error-text,
+#error-name,
 #error-number,
 #error-exp,
 #error-cvc {
@@ -405,12 +408,12 @@ body {
 }
 
 #error-number,
-#error-text {
+#error-name {
   margin-top: -1.5rem;
   margin-bottom: 1.5rem;
 }
 
-#error-text,
+#error-name,
 #error-number,
 #error-exp,
 #error-cvc {
@@ -498,11 +501,11 @@ body {
     height: 35.2rem;
     margin-left: 12.5rem;
   }
-  .input-form #first-name,
-.input-form #card-number {
+  .input-form #name,
+.input-form #number {
     width: 38.1rem;
   }
-  .input-form #exp-date {
+  .input-form .exp-date {
     width: 8rem;
   }
   .input-form .mm-yy-cvc {
@@ -511,7 +514,7 @@ body {
   .input-form .mm-yy-cvc-labels .cvc {
     margin-left: 5rem;
   }
-  .input-form #cvc {
+  .input-form #cvc-num {
     width: 19.1rem;
     margin-left: 1rem;
   }
